package com.panda.behaver.strategy;


public class BubbleSort implements ISortStrategy {
    @Override
    public void sort(int[] array) {
        for (int j = 0; j < array.length - 1; j++) {
            for (int i = 0; i < array.length - 1 - j; i++) {
                if (array[i + 1] < array[i]) {
                    swap(array, i, i + 1);
                }
            }
        }
    }

    private void swap(int[] array, int i, int j) {
        int temp = array[i];
        array[i] = array[j];
        array[j] = temp;
    }

}
