package com.panda.behaver.strategy;

public interface ISortStrategy {
    void sort(int[] array);
}
